@@ -9,12 +9,12 @@
 <body  BGCOLOR="#FFFFFF"  TEXT="#000000"  LINK="#0000FF"  VLINK="#000080"  ALINK="#FF0000" >
 <p align="center">
  <img SRC="apcupsd.gif" ALT="[APCUPSD DOCUMENTATION]">
- <h3 align="center">Apcupsd Linux UPS daemon version 3.9.8</h3>
+ <h3 align="center">Apcupsd Linux UPS daemon version 3.9.9</h3>
 </p>
-<h1>Apcupsd 3.9.8 User's Manual</h1>
+<h1>Apcupsd 3.9.9 User's Manual</h1>
 <hr>
 
-<h3>Last update to this manual 15 April 2002</h3>
+<h3>Last update to this manual 21 May 2002</h3>
 
 
 
