@@ -2,5 +2,5 @@
 #define AVERSION 3
 #define VERSION "3.9.9"
 #define VSTRING "399"
-#define DATE    "18 May 2002"
-#define LSMDATE "18May02"
+#define DATE    "28 May 2002"
+#define LSMDATE "28May02"
